renamed property for clarity

--- a/tests/visual/test.html
+++ b/tests/visual/test.html
@@ -39,7 +39,7 @@
      <div class="scrollable-for-scroll" style="height:500px">some content after</div>
     </div>
 
-    <script src="../../build/popper.min.js"></script>
+    <script src="../../build/popper.js"></script>
     <script>
     var reference = document.querySelector('.target');
     var popperElem = document.querySelector('.popper');
@@ -47,7 +47,7 @@
         reference,
         popperElem,
         {
-            placement: 'right',
+            placement: 'auto',
             boundariesElement: boundaries
         }
     );
