moved some logic into a new `getPopperOffsets` modifier
this allows autoPlacement to work properly

--- a/tests/visual/test.html
+++ b/tests/visual/test.html
@@ -48,7 +48,10 @@
         popperElem,
         {
             placement: 'auto',
-            boundariesElement: boundaries
+            boundariesElement: boundaries,
+            modifiers: {
+                flip: { enabled: false }
+            }
         }
     );
 
